<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sukavina</string>
    <string name="attendance_widget_description">Xem nhanh giờ vào và giờ ra hôm nay.</string>
    <string name="widget_weekday_monday">T2</string>
    <string name="widget_weekday_tuesday">T3</string>
    <string name="widget_weekday_wednesday">T4</string>
    <string name="widget_weekday_thursday">T5</string>
    <string name="widget_weekday_friday">T6</string>
    <string name="widget_weekday_saturday">T7</string>
    <string name="widget_weekday_sunday">CN</string>
    <string name="widget_check_in_label">GIỜ VÀO</string>
    <string name="widget_check_out_label">GIỜ RA</string>
    <string name="widget_check_in_arrow" translatable="false">⇥</string>
    <string name="widget_check_out_arrow" translatable="false">⇤</string>
    <string name="widget_time_placeholder" translatable="false">--:--</string>
    <string name="widget_month_placeholder">Tháng 8 • 2026</string>
    <string name="widget_week_header"> T2   T3   T4   T5   T6   T7   CN</string>
    <string name="widget_month_grid_placeholder" translatable="false"> 27   28   29   30   31    1    2\n  3    4    5    6    7    8    9\n 10   11   12   13   14   15   16\n 17   18   19   20   21   22   23\n 24   25   26   27   28   29   30\n 31    1    2    3    4    5    6</string>
    <string name="widget_day_1" translatable="false">1</string>
    <string name="widget_day_2" translatable="false">2</string>
    <string name="widget_day_3" translatable="false">3</string>
    <string name="widget_day_4" translatable="false">4</string>
    <string name="widget_day_5" translatable="false">5</string>
    <string name="widget_day_6" translatable="false">6</string>
    <string name="widget_day_7" translatable="false">7</string>
</resources>
